--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-26 16:56+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-02-09 14:14+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -359,7 +359,7 @@ msgstr "Deelevenement Label ID"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status Id"
-msgstr "Deelnemerstatusnummer"
+msgstr "Deelnemersstatusnummer"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Role Id"
@@ -485,7 +485,7 @@ msgstr "Openbaar evenement?"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "Include Map to Event Location?"
-msgstr "Kaart naar evenementlocatie opnemen?"
+msgstr "Landkaart met evenementlocatie toevoegen?"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "End Date / Time"
@@ -1086,7 +1086,7 @@ msgstr "Er zijn op dit moment geen plaatsen beschikbaar voor evenement '%1'."
 msgid ""
 "Your Credit Card transaction was not successful. No money has yet been "
 "charged to your card."
-msgstr "Uw creditcardtransactie was niet succesvol. Er is nog geen geld op uw kaart in rekening gebracht."
+msgstr "Uw creditcardtransactie is mislukt. Er is nog geen geld op uw kaart in rekening gebracht."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid ""
@@ -1499,7 +1499,7 @@ msgstr "Deelnemers batchgewijs bijwerken met een profiel"
 
 #: CRM/Event/Task.php
 msgid "Change Participant Status"
-msgstr "Deelnemerstatus wijzigen"
+msgstr "Deelnemersstatus wijzigen"
 
 #: CRM/Event/Task.php
 msgid "Print Event Name Badges"
@@ -1762,7 +1762,7 @@ msgid ""
 "this feature you must first enable the Participant Statuses used by the "
 "waitlist work-flow (Administer » CiviEvent » Participant Statuses). Then "
 "reload this form and check 'Offer a Waitlist?'."
-msgstr "U kunt gebruikers toestaan zich op een wachtlijst te laten plaatsen als het evenement volgeboekt is. Om deze functie in te schakelen moet u eerst de deelnemerstatussen die gebruikt worden voor de wachtlijst inschakelen (Beheren &raquo; Deelnemerstatussen). Keer daarna terug naar dit scherm en vink de optie 'Wachtlijst aanbieden?' aan."
+msgstr "U kunt gebruikers toestaan zich op een wachtlijst te laten plaatsen als het evenement volgeboekt is. Om deze functie in te schakelen moet u eerst de deelnemersstatussen die gebruikt worden voor de wachtlijst inschakelen (Beheren &raquo; Deelnemersstatussen). Keer daarna terug naar dit scherm en vink de optie 'Wachtlijst aanbieden?' aan."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -1807,7 +1807,7 @@ msgid ""
 "Include map presenting event location on event information page? (A map "
 "provider must be configured under <a href='%1'>Administer > System Settings "
 "> Mapping and Geocoding</a>)"
-msgstr "Kaart met de locatie toevoegen aan de informatiepagina? (Er moet een landkaartleverancier zijn ingesteld bij <a href='%1'>Systeeminstellingen > Kaarten en geocoding</a>)"
+msgstr "Landkaart met de locatie toevoegen aan de informatiepagina? (Er moet een aanbieder zijn ingesteld bij <a href='%1'>Systeeminstellingen > Landkaart en Geocoding</a>)"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Public Events"
@@ -1993,7 +1993,7 @@ msgid ""
 " must first enable the Participant Statuses used by the approval work-flow "
 "(Administer » CiviEvent » Participant Statuses). Then reload this form and "
 "check 'Require participant approval?'."
-msgstr "U kunt evenementen ook zo configureren dat administratieve goedkeuring nodig is voordat deelnemers hun inschrijving kunnen afronden. Om deze functie in te kunnen schakelen dient u eerst de deelnemerstatussen die door de goedkeuringswerkstroom worden gebruikt in te schakelen (Beheer &raquo; CiviEvent &raquo; Deelnemerstatussen). Keer vervolgens terug naar dit formulier en vink het selectievakje 'Deelnemergoedkeuring vereist' aan."
+msgstr "U kunt evenementen ook zo configureren dat administratieve goedkeuring nodig is voordat deelnemers hun inschrijving kunnen afronden. Om deze functie in te kunnen schakelen dient u eerst de deelnemersstatussen die door de goedkeuringswerkstroom worden gebruikt in te schakelen (Beheer &raquo; CiviEvent &raquo; Deelnemersstatussen). Keer vervolgens terug naar dit formulier en vink het selectievakje 'Deelnemergoedkeuring vereist' aan."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid ""
@@ -2760,7 +2760,7 @@ msgid ""
 "/ or Registration Approval features enabled. In order to use these features "
 "you must first enable the related Participant Statuses (Administer &raquo; "
 "CiviEvent &raquo; Participant Statuses)."
-msgstr "Dit scherm is met name nuttig voor het beheren van evenementen waarvan de wachtlijst- en/of goedkeuringsfunctie zijn ingeschakeld. Om deze functies te gebruiken dient u eerst de bijbehorende deelnemerstatussen in te schakelen (Beheren &raquo; CiviEvent &raquo; Deelnemerstatussen)."
+msgstr "Dit scherm is met name nuttig voor het beheren van evenementen waarvan de wachtlijst- en/of goedkeuringsfunctie zijn ingeschakeld. Om deze functies te gebruiken dient u eerst de bijbehorende deelnemersstatussen in te schakelen (Beheren &raquo; CiviEvent &raquo; Deelnemersstatussen)."
 
 #: templates/CRM/Event/Form/Task/ParticipantStatus.hlp
 msgid "Tip: Managing waitlisted participants"
@@ -2804,7 +2804,7 @@ msgstr "Naam of nummer van het evenement (een uniek geheel getal, door CiviEvent
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid "Participant Status (ie. Registered, Attended, Cancelled, etc.)"
-msgstr "Deelnemerstatus (zoals Ingeschreven, Aanwezig, Geannuleerd, enz.)"
+msgstr "Deelnemersstatus (zoals Ingeschreven, Aanwezig, Geannuleerd, enz.)"
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid ""
@@ -3537,7 +3537,7 @@ msgid ""
 "waitlist work-flow (click the pencil icon, or navigate to Administer » "
 "CiviEvent » Participant Statuses). Then reload this form and check 'Offer a "
 "Waitlist?'."
-msgstr "U kunt gebruikers toestaan zich op een wachtlijst te laten plaatsen als het evenement volgeboekt is. Om deze functie in te schakelen moet u eerst de deelnemerstatussen die gebruikt worden door de wachtlijstwerkstroom inschakelen (Beheren » CiviEvent » Deelnemerstatussen). Keer daarna terug naar dit scherm en vink de optie 'Wachtlijst aanbieden?' aan."
+msgstr "U kunt gebruikers toestaan zich op een wachtlijst te laten plaatsen als het evenement volgeboekt is. Om deze functie in te schakelen moet u eerst de deelnemersstatussen die gebruikt worden door de wachtlijstwerkstroom inschakelen (Beheren » CiviEvent » Deelnemersstatussen). Keer daarna terug naar dit scherm en vink de optie 'Wachtlijst aanbieden?' aan."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.tpl
 msgid "Edit Participant Status Options"
@@ -3757,7 +3757,7 @@ msgstr "Deelnemersrol ID"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "Include Map to Event Location"
-msgstr "Kaart naar locatie toevoegen"
+msgstr "Landkaart met locatie toevoegen"
 
 #: CRM/Event/Form/Participant.php
 msgid "%1 : Offline registration (by %2)"
