--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-23 14:18+0000\n"
+"PO-Revision-Date: 2016-02-25 21:15+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -9032,7 +9032,7 @@ msgstr "Alternativtyp"
 
 #: CRM/Custom/Form/Field.php
 msgid "Limit List to Group"
-msgstr ""
+msgstr "Begränsa listning till grupp"
 
 #: CRM/Custom/Form/Field.php templates/CRM/Custom/Form/Field.tpl
 msgid "Advanced Filter"
@@ -10824,23 +10824,23 @@ msgstr "Uppdateringarna har sparats."
 
 #: CRM/UF/Form/AdvanceSetting.php js/model/crm.uf.js
 msgid "Enable mapping for this profile?"
-msgstr ""
+msgstr "Aktivera karta för denna profil?"
 
 #: CRM/UF/Form/AdvanceSetting.php
 msgid "Issue warning and do not save"
-msgstr ""
+msgstr "Varna och spara inte"
 
 #: CRM/UF/Form/AdvanceSetting.php
 msgid "Update the matching contact"
-msgstr ""
+msgstr "Uppdatera matchande kontakt"
 
 #: CRM/UF/Form/AdvanceSetting.php
 msgid "Allow duplicate contact to be created"
-msgstr ""
+msgstr "Tillåt att duplikat skapas"
 
 #: CRM/UF/Form/AdvanceSetting.php js/model/crm.uf.js
 msgid "What to do upon duplicate match"
-msgstr ""
+msgstr "Vad ska hända vid duplikat"
 
 #: CRM/UF/Form/AdvanceSetting.php js/model/crm.uf.js
 msgid "Redirect URL"
@@ -10852,11 +10852,11 @@ msgstr ""
 
 #: CRM/UF/Form/AdvanceSetting.php js/model/crm.uf.js
 msgid "Limit listings to a specific Group?"
-msgstr ""
+msgstr "Begränsa listningen till en specifik grupp?"
 
 #: CRM/UF/Form/AdvanceSetting.php js/model/crm.uf.js
 msgid "Notify when profile form is submitted?"
-msgstr ""
+msgstr "Meddela när profilen används?"
 
 #: CRM/UF/Form/AdvanceSetting.php js/model/crm.uf.js
 msgid "Add new contacts to a Group?"
@@ -10868,7 +10868,7 @@ msgstr "Inkludera reCAPTCHA?"
 
 #: CRM/UF/Form/AdvanceSetting.php js/model/crm.uf.js
 msgid "Include profile edit links in search results?"
-msgstr ""
+msgstr "Inkludera länk för att redigera kontakten i sökresultatet?"
 
 #: CRM/UF/Form/AdvanceSetting.php
 msgid "Include %1 user account information links in search results?"
@@ -10876,15 +10876,15 @@ msgstr ""
 
 #: CRM/UF/Form/AdvanceSetting.php
 msgid "No account create option"
-msgstr ""
+msgstr "Tillåt inte att skapa konto"
 
 #: CRM/UF/Form/AdvanceSetting.php
 msgid "Give option, but not required"
-msgstr ""
+msgstr "Ge möjligheten men kräv inte"
 
 #: CRM/UF/Form/AdvanceSetting.php
 msgid "Account creation required"
-msgstr ""
+msgstr "Kräv konto"
 
 #: CRM/UF/Form/AdvanceSetting.php
 msgid "%1 user account registration option?"
@@ -11768,7 +11768,7 @@ msgstr ""
 msgid ""
 "Select a group if you are using this profile for adding new contacts, AND "
 "you want the new contacts to be automatically assigned to a group."
-msgstr ""
+msgstr "Välj en grupp om du använder den här profilen för att lägga till nya kontakter OCH du vill att nya kontakter automatiskt skall läggas till i gruppen."
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -11789,7 +11789,7 @@ msgstr ""
 
 #: js/model/crm.uf.js
 msgid "Pre-form Help "
-msgstr ""
+msgstr "Hjälp-text före formuläret"
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid "Explanatory text displayed at the beginning of the form."
@@ -11803,14 +11803,14 @@ msgstr ""
 msgid ""
 "Check this box if you want to include a link in the listings to Edit profile"
 " fields. Only users with permission to edit the contact will see this link."
-msgstr ""
+msgstr "Kryssa i denna ruta om du vill ha med en länk i listningar för att redigera fälten. Bara användare med tillräcklig behörighet kommer att se länken."
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid ""
 "If enabled, a Map link is included on the profile listings rows and detail "
 "screens for any contacts whose records include sufficient location data for "
 "your mapping provider."
-msgstr ""
+msgstr "Om denna funktion är aktiverad kommer en kartlänk att visas i profilen för alla kontakter vilkas kontaktdata innehåller tillräcklig information för din karttjänst."
 
 #: js/model/crm.uf.js
 msgid "Include Drupal user account information links in search results?"
@@ -11820,7 +11820,7 @@ msgstr ""
 msgid ""
 "Select a group if you are using this profile for search and listings, AND "
 "you want to limit the listings to members of a specific group."
-msgstr ""
+msgstr "Välj en grupp om du tänker använda denna profil för sökningar och listningar OCH du vill begränsa resultaten till medlemmar i en grupp."
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -11829,7 +11829,7 @@ msgid ""
 "enter one or more email addresses here. Multiple email addresses should be "
 "separated by a comma (e.g. jane@example.org, paula@example.org). The first "
 "email address listed will be used as the FROM address in the notifications."
-msgstr ""
+msgstr "Om du vill att medlemmar i din organisation ska få meddelande via e-post närhelst denna profil används för att mata in eller uppdatera kontaktinformation, ange då en eller flera e-postadresser här. Separera e-postadresserna med kommatecken (t.ex janne@exempel.org, paul@example.org). Den först angivna e-postadressen används som avsändare i notifieringarna."
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -15446,7 +15446,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Page/DedupeRules.tpl
 msgid "Add Rule for %1s"
-msgstr ""
+msgstr "Lägg till regel för %1"
 
 #: templates/CRM/Contact/Page/Inline/Actions.tpl
 #: templates/CRM/common/drupal.tpl templates/CRM/common/drupal6.tpl
@@ -16500,7 +16500,7 @@ msgstr ""
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid "Explanatory text displayed at the beginning of this sets of fields."
-msgstr ""
+msgstr "Förklarande text som visas ovanför denna uppsättning fält."
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid "Post Help"
@@ -16508,7 +16508,7 @@ msgstr ""
 
 #: templates/CRM/Custom/Page/Group.hlp
 msgid "Explanatory text displayed below this set of fields."
-msgstr ""
+msgstr "Förklarande text som visas under denna uppsättning fält."
 
 #: templates/CRM/Custom/Page/Group.tpl
 msgid ""
@@ -18001,17 +18001,17 @@ msgstr " fält. Profiler med en blandning av fälttyper kan inte inkludera sökb
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Help Description"
-msgstr ""
+msgstr "Hjälptext"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Explanatory text for profile."
-msgstr ""
+msgstr "Förklarande text för profilen."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
 "Profiles can be used in many different ways (and a single profile can be "
 "used in multiple contexts)"
-msgstr ""
+msgstr "Profiler kan användas på många olika sätt (och en enskild profil kan användas i flera olika sammanhang)"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18019,14 +18019,14 @@ msgid ""
 " including profiles directly in Online Contribution Pages and Event "
 "Registration forms. When using a profile in this manner you do not need to "
 "check any of the \"Used For\" checkboxes."
-msgstr ""
+msgstr "Du kan samla extra information om en bidragsgivare eller arrangemangsdeltagare genom att ta med profiler direkt på webb-baserade bidrags- och arrangemangsanmälningsformulär. När du använder profiler på detta sätt behöver du inte ange något särskilt under \"Används för\"."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
 "Check <strong>Standalone Form or Directory</strong> if you want it to use "
 "this profile for custom forms, or contact listing and view screens (from the"
 " civicrm/profile path)."
-msgstr ""
+msgstr "Kryssa i <strong>Fristående formulär eller katalog</strong> om du tänker använda profilen för anpassade formulär, listningar av kontakter eller visningssidor."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18048,15 +18048,15 @@ msgstr ""
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Help Pre-Form"
-msgstr ""
+msgstr "Hjälp-text före formuläret"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Help Post-Form"
-msgstr ""
+msgstr "Hjälptext efter formuläret"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Limit Group"
-msgstr ""
+msgstr "Begränsa till grupp"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Notify Email"
@@ -18072,14 +18072,14 @@ msgstr ""
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "reCaptcha"
-msgstr ""
+msgstr "reCaptcha"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
 "When reCAPTCHA is enabled for a profile form, anonymous users are required "
 "to read an image with letters and numbers and enter the value in a field. "
 "This helps prevent abuse by automated scripts."
-msgstr ""
+msgstr "När reCAPTCHA är aktiverat för ett profil-formulär måste anonyma besökare skriva in de bokstäver och siffror som finns i en bild, i ett fält. Det avvärjer illvillig användning via automatiserade skript eller program."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18088,7 +18088,7 @@ msgid ""
 " keys. Then enter both keys in <a href=\"%2\">Administer CiviCRM &raquo; "
 "System Settings &raquo; Misc (Undelete, PDFs, Limits, Logging, Captcha, "
 "etc.)</a>."
-msgstr ""
+msgstr "För att använda reCAPTCHA behöver du skaffa ett konto på <a href=\"%1\" target=\"_blank\">Googles reCaptcha-sida</a> för att få din privata och publika nyckel. Ange sedan båda nycklarna på <a href=\"%2\">Administrera &raquo; Systeminställningar &raquo; Övrigt</a>."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18096,17 +18096,17 @@ msgid ""
 "Snippet embedded in a non-CiviCRM web page. reCAPTCHA requires dynamic page "
 "generation. Submitting a stand-alone form with reCAPTCHA included will "
 "always result in a reCAPTCHA validation error."
-msgstr ""
+msgstr "Aktivera inte denna funktion om du använder profilen som en komponent i ett HTML-formulär inbäddat i en sida som inte ingår i CiviCRM. reCAPTCHA kräver dynamisk sidladdning och användning från en statisk sida kommer alltid att misslyckas med valideringen."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
 "reCAPTCHA is also not available when a profile is used inside the User "
 "Registration and My Account screens."
-msgstr ""
+msgstr "reCAPTCHA används inte heller när en profil används på sidorna för <em>Användarregistrering<em> och <em>Mina sidor</em>."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Account Creation"
-msgstr ""
+msgstr "Skapa konto"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18114,7 +18114,7 @@ msgid ""
 "online contribution page OR an event registration page, anonymous users will"
 " be given the option to create a %1 User Account as part of completing the "
 "form."
-msgstr ""
+msgstr "Om du använder denna profil som formulär för registrering, använder den i en webb-baserad inbetalningssida ELLER en sida för arrangemangsanmälningar kommer anonyma besökare att få möjligheten att skapa ett %1-konto som en del av formuläret."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18135,7 +18135,7 @@ msgstr ""
 msgid ""
 "This feature requires the 'Allow User Registration' setting to be 'Yes' in "
 "Joomla Global Configuration >> System Settings."
-msgstr ""
+msgstr "Denna funktion kräver att inställningen \"Tillåt användarregistrering\" är satt till \"Ja\" in Joomlas användarinställningar."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18150,7 +18150,7 @@ msgid ""
 " record or otherwise he will get a 'duplicate record' warning, and their "
 "input will not be saved. Contact matching is based on your configured "
 "'Strict' rule for identifying duplicate contacts."
-msgstr ""
+msgstr "Om du använder denna profil för att tillåta besökare att registrera sig och redigera sin information så anger denna inställning vad som händer när data matchar en redan existerande kontakt. Här kan du välja om det inmatade data skall uppdatera den matchande kontakten, skapa en ny post (duplikat) eller ge ett felmeddelande. Kontaktmatching görs med den avdupliceringsregeln för kontakter som är strikt."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18158,31 +18158,31 @@ msgid ""
 "contribution, membership signup or event registration form. In this case a "
 "contact match always results in the transaction being linked to the matching"
 " contact.</p>"
-msgstr ""
+msgstr "Denna inställning används inte om profilen används i en inbetalningssida, formilär för medlemsskaps- eller arrangemangsanmälning. I dessa fall länkas alltid resultatet till den matchande kontakten.</p>"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
 "In all cases, the check for an existing matching contact uses the default \"Individual Strict Duplicate Matching Rule\" (match on email address). If you are concerned with existing contact data being over-written by anonymous visitors, you can modify this rule to make matches less likely (or even impossible).\n"
 "  For example, if you NEVER want anonymous input to match (i.e. always create a new contact record) - edit that rule and set the 'weight threshold' higher than 10. You will then need to run Find Duplicates periodically using a different rule, and merge any duplicate records with their associated memberships, contributions, etc."
-msgstr ""
+msgstr "I samtliga fall används den avdupliceringsregel för personer som är standard för strikt matching (matcha e-postadress). Om du är rätt för att existerande data skrivs över av anonyma besökare kan du modifiera denna regel och göra det mindre troligt att kontakter matchar (eller till och med omöjligt).\nTill exempel, om du ALDRIG vill att anonyma besökares inmatade data skall match (dvs. alltid ska skapa en ny post) - redigera regel och sätt \"viktad tröskel\" högre än 10. Du kommer sen att behöva köra \"Sök kontaktdubbletter\" regelbundet med en annan regel och slå ihop duplicerade kontakter och deras medlemskap, inbetalningar etc."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
 "NOTE: If there are multiple matching contacts, the first matching record is "
 "used."
-msgstr ""
+msgstr "NOTERA: Om det finns flera matchande kontakter kommer den första som hittas att användas."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Map Link"
-msgstr ""
+msgstr "Kartlänk"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Edit Link"
-msgstr ""
+msgstr "Redigeringslänk"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "User Link"
-msgstr ""
+msgstr "Användarlänk"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18190,7 +18190,7 @@ msgid ""
 "contacts' %1 user account information (e.g. their 'My Account' page). This "
 "link will only be included for contacts who have a user account on your "
 "website."
-msgstr ""
+msgstr "Kryssa i denna ruta om du vill ta med en länk i listningar till att visa kontaktens användarkonto i %1 (t.ex deras \"Min sida\"). Denna länk kommer bara att finnas för kontakter som har ett konto."
 
 #: templates/CRM/UF/Form/Group.hlp xml/templates/civicrm_data.tpl
 msgid "Proximity Search"
@@ -18202,19 +18202,19 @@ msgid ""
 "proximity searching. When enabled, a proximity search block will be added to"
 " the search criteria. This block will contain fields to set the proximity "
 "start address, and a field to set a 'Radius' (distance from that address)."
-msgstr ""
+msgstr "Om du använder den här profilen som sökformulär kan du välja att inkludera sökning efter geografisk närhet. Om den funktionen är aktiverad kommer ett block för geografisk sökning att läggas till sökkriterierna. Blocket kommer att innehålla fält för att sätta utgångspunkten för sökningen och ett fält för \"Radie\" (avståndet från den adressen)."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
 "Set Proximity Search as required if you want all searches using this profile"
 " to require the user to enter a start address and a radius."
-msgstr ""
+msgstr "Ange Geografisk Sökning som obligatorisk om du vill att alla sökningar som använder denna profil ska kräva att användare anger en utgångsadress och en radie."
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
 "IMPORTANT: You must enable a Mapping Provider in order to use the Proximity "
 "Search feature (Administer > System Settings > Mapping and Geocoding)."
-msgstr ""
+msgstr "VIKTIGT: du måste aktivera en karttjänst för att använda den geografiska sökningsfunktionen (Administrera > Systeminställningar > Karttjänster och geokodning)."
 
 #: templates/CRM/UF/Form/Group.tpl
 msgid "Delete CiviCRM Profile"
@@ -24455,7 +24455,7 @@ msgstr ""
 
 #: CRM/Core/DAO/UFGroup.php
 msgid "Include Proximity Search?"
-msgstr ""
+msgstr "Inkludera geografisk sökning?"
 
 #: CRM/Core/DAO/UFJoin.php
 msgid "UF Join ID"
