--- a/po/fr_CA/menu.po
+++ b/po/fr_CA/menu.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-28 05:01+0000\n"
+"PO-Revision-Date: 2016-02-28 15:11+0000\n"
 "Last-Translator: Mathieu B <mathieu@brab.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -1669,7 +1669,7 @@ msgstr "Rapports"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Constituent Summary"
-msgstr "Résumé du constituant"
+msgstr "Liste des contacts"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
