--- a/po/cs_CZ/common-components.po
+++ b/po/cs_CZ/common-components.po
@@ -6,13 +6,13 @@
 # iv0 <ivo.zlabek@gmail.com>, 2011
 # Marek Boček <marek.bocek@iqrs.cz>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Tass <vanatomas@fastmail.net>, 2014
+# Tass <vanatomas@fastmail.net>, 2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-02 09:44+0000\n"
+"Last-Translator: Tass <vanatomas@fastmail.net>\n"
 "Language-Team: Czech (http://www.transifex.com/civicrm/civicrm/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -826,7 +826,7 @@ msgstr "Každý(ch)"
 #: CRM/Contribute/Form/Contribution/Main.php
 #: CRM/Event/Form/Registration/Register.php
 msgid "Please select a Payment Method"
-msgstr ""
+msgstr "Prosím vyberte platební metodu"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 #: CRM/Event/Form/Registration/Register.php
