--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-16 22:18+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-03-02 09:29+0000\n"
+"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6455,7 +6455,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Tax and Invoicing"
-msgstr ""
+msgstr "Activer les taxes et la facturation"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit or Add Recipients"
