--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 21:46+0000\n"
+"PO-Revision-Date: 2016-03-03 02:15+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -4612,7 +4612,7 @@ msgid ""
 "install extensions posted on the <a href=\"%1\">public CiviCRM Extensions "
 "Directory</a>. If you have downloaded extensions manually and don't see them"
 " here, try clicking the \"Refresh\" button."
-msgstr "Er zijn geen extensies beschikbaar. Klik op \\\"Verversen\\\" om de informatie over beschikbare extensies te verversen. Doe dit ook als u handmatig extensies heeft toegevoegd. Klik op de tab \"Nieuwe toevoegen\" om de extensies op de <a href=\"%1\">openbare map</a> te bekijken en eventueel te installeren. "
+msgstr "Er zijn geen extensies beschikbaar. Klik op \"Verversen\" om de informatie over beschikbare extensies te verversen. Doe dit ook als u handmatig extensies heeft toegevoegd. Klik op de tab \"Nieuwe toevoegen\" om de extensies op de <a href=\"%1\">openbare map</a> te bekijken en eventueel te installeren. "
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid ""
