--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 21:45+0000\n"
+"PO-Revision-Date: 2016-03-03 13:29+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -5507,7 +5507,7 @@ msgstr "E-mails weer toestaan "
 
 #: CRM/Contact/Task.php
 msgid "Alter Contact Communication Preferences"
-msgstr "Wijzig communicatie voorkeuren van contact"
+msgstr "Wijzig communicatievoorkeuren van contact"
 
 #: CRM/Contact/Task.php
 msgid "Restore Contacts"
@@ -15513,7 +15513,7 @@ msgstr "Adres behoort bij %1"
 
 #: templates/CRM/Contact/Page/Inline/CommunicationPreferences.tpl
 msgid "Edit communication preferences"
-msgstr "Wijzig communicatie voorkeuren"
+msgstr "Wijzig communicatievoorkeuren"
 
 #: templates/CRM/Contact/Page/Inline/CommunicationPreferences.tpl
 msgid "Customized"
@@ -19477,7 +19477,7 @@ msgstr "Looplijst"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Petition Signature"
-msgstr "Petitie Handtekening"
+msgstr "Handtekening petitie"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Mass SMS"
@@ -19685,7 +19685,7 @@ msgstr "Verberg smartgroepen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Communication Preferences"
-msgstr "Communicatie voorkeuren"
+msgstr "Communicatievoorkeuren"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Tags and Groups"
