--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -6,6 +6,7 @@
 # Claude Borgogno <claude.borgogno@axoide.com>, 2011
 # F Boot <f2boot@gmail.com>, 2012
 # Mathieu Lutfy <mathieu@bidon.ca>, 2015
+# mgregoire <mgregoire@mgregoire.net>, 2016
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-02-15 20:43+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-03-03 07:25+0000\n"
+"Last-Translator: mgregoire <mgregoire@mgregoire.net>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -503,7 +504,7 @@ msgstr "importer des contacts à partir d'autres sources sur <a href=\"!1\">Impo
 msgid ""
 "create or administer tags (e.g. organizer, foundation, environment...) at <a"
 " href=\"!1\">CiviCRM &raquo; Administer &raquo; Tags</a>."
-msgstr ""
+msgstr "créez ou administrez des tags (ex: organisation, fondation, environnement...) sur <a href=\"!1\">CiviCRM &raquo; Administrer &raquo; les Tags</a>."
 
 #: drupal/civicrm.module
 msgid ""
