--- a/po/de_DE/provinces.po
+++ b/po/de_DE/provinces.po
@@ -8,6 +8,7 @@
 # Fabian <schuttenberg@systopia.de>, 2016
 # MichaSeidler <info@euroconsults.eu>, 2011
 # Martin Peth <peth@systopia.de>, 2015
+# Moira Brülisauer <moosline@savvy.ch>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Ronny Weise <inactive+civi_uebersetzer@transifex.com>, 2013
 # Sven <sven.lorkowski@freenet.de>, 2015
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-07 09:28+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-03-04 14:00+0000\n"
+"Last-Translator: Moira Brülisauer <moosline@savvy.ch>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15303,59 +15304,59 @@ msgstr "Arica y Parinacota"
 
 msgctxt "province"
 msgid "Dobrich"
-msgstr ""
+msgstr "Dobrich"
 
 msgctxt "province"
 msgid "Yambol"
-msgstr ""
+msgstr "Jambol"
 
 msgctxt "province"
 msgid "Kardzhali"
-msgstr ""
+msgstr "Kardschali"
 
 msgctxt "province"
 msgid "Kyustendil"
-msgstr ""
+msgstr "Kjustendil"
 
 msgctxt "province"
 msgid "Lovech"
-msgstr ""
+msgstr "Lowetsch"
 
 msgctxt "province"
 msgid "Smolyan"
-msgstr ""
+msgstr "Smoljan"
 
 msgctxt "province"
 msgid "Shumen"
-msgstr ""
+msgstr "Schumen"
 
 msgctxt "province"
 msgid "Targovishte"
-msgstr ""
+msgstr "Targowischte"
 
 msgctxt "province"
 msgid "Vratsa"
-msgstr ""
+msgstr "Wraza"
 
 msgctxt "province"
 msgid "Kepulauan Bangka Belitung"
-msgstr ""
+msgstr "Bangka-Belitung Islands"
 
 msgctxt "province"
 msgid "Papua Barat"
-msgstr ""
+msgstr "West Papua"
 
 msgctxt "province"
 msgid "DKI Jakarta"
-msgstr ""
+msgstr "DKI Jakarta"
 
 msgctxt "province"
 msgid "DI Yogyakarta"
-msgstr ""
+msgstr "DI Yogyakarta"
 
 msgctxt "province"
 msgid "Jūrmala"
-msgstr ""
+msgstr "Jūrmala"
 
 msgctxt "province"
 msgid "Liepāja"
@@ -15399,7 +15400,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Domžale"
-msgstr ""
+msgstr "Domschale"
 
 msgctxt "province"
 msgid "Gorišnica"
