--- a/po/cs_CZ/event.po
+++ b/po/cs_CZ/event.po
@@ -7,14 +7,14 @@
 # Marek Boček <marek.bocek@iqrs.cz>, 2014
 # Martin Máša <my.melody.production@gmail.com>, 2013-2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Tass <vanatomas@fastmail.net>, 2013-2014
+# Tass <vanatomas@fastmail.net>, 2013-2014,2016
 # Tass <vanatomas@fastmail.net>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-04 23:02+0000\n"
+"Last-Translator: Tass <vanatomas@fastmail.net>\n"
 "Language-Team: Czech (http://www.transifex.com/civicrm/civicrm/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3556,7 +3556,7 @@ msgid ""
 "each person</strong> - check the \"Register multiple participants\" option, "
 "AND include a profile in this registration form which <strong>includes First"
 " Name and Last Name fields</strong>."
-msgstr ""
+msgstr "Zaškrtněte toto políčko, abyste umožnili uživateli registrovat více účastníků se stejnou e-mailovou adresou. Případně pokud chcete, aby byli další účastníci registrováni <strong>bez požadavku na zadání e-mailové adresy pro každého účastníka </strong>, zaškrtněte volbu \"Registrovat více účastníků\" A zahrňte profil v tomto registračním formuláři, který <strong>zahrnuje Křestní jméno a Příjmení</strong>."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Duplicate Matching Rule"
